test/match9.l1.out
entry: var params, 3 locals, 0 temps
falling through
ok
error: attempt to fall through to a @match
               error	(builtin function)
               entry	(match9.l1:17)
